--- a/projects/mona-ui/src/lib/inputs/modules/color-picker/components/color-picker/color-picker.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/color-picker/components/color-picker/color-picker.component.html
@@ -3,7 +3,7 @@
         <fa-icon [icon]="noColorIcon" *ngIf="!value"></fa-icon>
     </div>
     <div class="mona-input-selector-icon">
-        <button monaButton class="mona-input-button">
+        <button monaButton [flat]="true" class="mona-input-button">
             <fa-icon [icon]="dropdownIcon"></fa-icon>
         </button>
     </div>
