--- a/projects/mona-ui/src/lib/buttons/modules/chip/components/chip/chip.component.html
+++ b/projects/mona-ui/src/lib/buttons/modules/chip/components/chip/chip.component.html
@@ -1,14 +1,13 @@
 <div class="mona-chip" [ngClass]="{'mona-disabled': disabled}" [attr.tabindex]="disabled ? -1 : tabindex">
-    <div></div>
-    <div class="mona-chip-content">
-        <span class="mona-chip-label">{{label}}</span>
+    <div class="mona-chip-content" [ngClass]="{'mona-closable-chip': removable}">
+        <span class="mona-chip-label" *ngIf="!!label">{{label}}</span>
         <ng-container *ngIf="!label">
             <ng-content></ng-content>
         </ng-container>
     </div>
-    <div class="mona-chip-close" (click)="remove.emit($event)" *ngIf="removable">
-        <button monaButton>
-            <span class="mona-chip-close-icon">⨯</span>
-        </button>
-    </div>
+    <button monaButton [flat]="true" (click)="remove.emit($event)" *ngIf="removable">
+        <span class="mona-chip-close-icon">
+            <fa-icon [icon]="closeIcon"></fa-icon>
+        </span>
+    </button>
 </div>
