--- a/projects/mona-ui/src/lib/dropdowns/modules/auto-complete/components/auto-complete/auto-complete.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/auto-complete/components/auto-complete/auto-complete.component.html
@@ -1,11 +1,12 @@
 <div class="mona-dropdown mona-auto-complete mona-input-selector" [ngClass]="{'mona-disabled': disabled}" [attr.tabindex]="disabled ? -1 : 0" #dropdownWrapper>
     <div class="mona-input-selector-value">
-        <mona-text-box [ngModel]="autoCompleteValue" (ngModelChange)="autoCompleteValue$.next($event)" (keydown)="onKeydown($event)"></mona-text-box>
-    </div>
-    <div class="mona-input-selector-icon" *ngIf="showClearButton && value" (click)="clearValue($event)">
-        <button monaButton class="mona-input-button">
-            <fa-icon [icon]="clearIcon"></fa-icon>
-        </button>
+        <mona-text-box [ngModel]="autoCompleteValue" (ngModelChange)="autoCompleteValue$.next($event)" (keydown)="onKeydown($event)">
+            <ng-template monaTextBoxSuffixTemplate>
+                <button monaButton [flat]="true" class="mona-input-button" *ngIf="showClearButton && value" (click)="clearValue($event)">
+                    <fa-icon [icon]="clearIcon"></fa-icon>
+                </button>
+            </ng-template>
+        </mona-text-box>
     </div>
 </div>
 
