--- a/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -9,12 +9,12 @@
         </ng-container>
     </div>
     <div class="mona-input-selector-icon" *ngIf="showClearButton && valuePopupListItem" (click)="clearValue($event)">
-        <button monaButton class="mona-input-button mona-dropdown-list-input-button">
+        <button monaButton [flat]="true" class="mona-input-button mona-dropdown-list-input-button">
             <fa-icon [icon]="clearIcon"></fa-icon>
         </button>
     </div>
     <div class="mona-input-selector-icon">
-        <button monaButton class="mona-input-button mona-dropdown-list-input-button">
+        <button monaButton [flat]="true" class="mona-input-button mona-dropdown-list-input-button">
             <fa-icon [icon]="dropdownIcon"></fa-icon>
         </button>
     </div>
