--- a/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.scss
@@ -9,11 +9,7 @@ div.mona-input-selector-value {
         flex-direction: row;
         flex-wrap: wrap;
         width: 100%;
-        height: 100%;
-        &::before {
-            content: "\200b";
-            padding: 8px 0;
-        }
+        padding-bottom: 1px;
     }
     & mona-text-box {
         flex: 1;
@@ -25,3 +21,6 @@ div.mona-input-selector-value {
     }
 }
 
+span.mona-multi-select-label {
+    padding: 4px 8px;
+}
