--- a/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.scss
@@ -13,7 +13,6 @@ div.mona-numeric-text-box-spinners {
     flex-wrap: nowrap;
     border-left: 1px solid var(--mona-border-color);
     & > [monaButton] {
-        //min-height: 0;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -28,6 +27,7 @@ div.mona-numeric-text-box-spinners {
         }
 
         &:first-child {
+            border-bottom: none;
             border-top: none;
             & > span {
                 transform: rotate(270deg);
@@ -36,7 +36,6 @@ div.mona-numeric-text-box-spinners {
 
         &:last-child {
             border-bottom: none;
-            border-top: none;
             & > span {
                 transform: rotate(270deg);
             }
