--- a/projects/mona-ui/src/lib/dropdowns/modules/auto-complete/components/auto-complete/auto-complete.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/modules/auto-complete/components/auto-complete/auto-complete.component.scss
@@ -1,5 +1,4 @@
-div.mona-input-selector-value {
-    & mona-text-box {
-        width: 100%;
-    }
+div.mona-auto-complete {
+    display: inherit;
+    width: 100%;
 }
