--- a/projects/mona-ui-tester/src/app/app.component.scss
+++ b/projects/mona-ui-tester/src/app/app.component.scss
@@ -34,6 +34,24 @@ div.content {
     background: var(--mona-background-light);
 }
 
+div.component-container {
+    width: 100%;
+    height: 100%;
+    //display: flex;
+    //align-items: center;
+    //justify-content: center;
+    & > div {
+        margin-bottom: 5px;
+        & > * {
+            margin-right: 5px;
+        }
+    }
+}
+
 mona-drop-down-list {
     width: 150px;
+}
+
+mona-button-group button {
+    min-width: 30px;
 }
