--- a/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.scss
@@ -1,5 +1,4 @@
-div.mona-input-selector-value {
-    & mona-text-box {
-        width: 100%;
-    }
+div.mona-combo-box {
+    display: inherit;
+    width: 100%;
 }
