--- a/projects/mona-ui/src/lib/inputs/modules/text-box/components/text-box/text-box.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/text-box/components/text-box/text-box.component.scss
@@ -1,8 +1,12 @@
+:host {
+    display: inline-flex;
+}
+
 div.mona-text-box {
     display: flex;
     & > [monaTextBox] {
         border: none;
-        height: 100%;
+        //height: 100%;
         width: 100%;
         &:active, &:focus, &:focus-within {
             box-shadow: none;
