--- a/projects/mona-ui/src/lib/date-inputs/modules/date-time-picker/components/date-time-picker/date-time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/date-time-picker/components/date-time-picker/date-time-picker.component.html
@@ -1,16 +1,15 @@
 <div class="mona-date-time-picker" [ngClass]="{'mona-disabled': disabled}" #popupAnchor>
-    <mona-text-box [disabled]="disabled" [readonly]="readonly" [ngModel]="currentDateString" (ngModelChange)="onDateStringEdit($event)" (inputBlur)="onDateInputBlur()">
-        <ng-template monaTextBoxSuffixTemplate>
-            <button monaButton [flat]="true" (click)="onDateInputButtonClick()" [disabled]="disabled" [tabIndex]="-1" class="mona-input-button">
-                <fa-icon [icon]="dateIcon"></fa-icon>
-            </button>
-        </ng-template>
-        <ng-template monaTextBoxSuffixTemplate>
-            <button monaButton [flat]="true" (click)="onTimeInputButtonClick()" [disabled]="disabled" [tabIndex]="-1" class="mona-input-button">
-                <fa-icon [icon]="timeIcon"></fa-icon>
-            </button>
-        </ng-template>
-    </mona-text-box>
+    <input monaTextBox class="mona-input-inner" [disabled]="disabled" [readonly]="readonly" [ngModel]="currentDateString"
+           (ngModelChange)="onDateStringEdit($event)" (blur)="onDateInputBlur()">
+    <!--    <span class="mona-input-clear-icon" *ngIf="showClearButton && valuePopupListItem" (click)="clearValue($event)">-->
+    <!--        <fa-icon [icon]="clearIcon"></fa-icon>-->
+    <!--    </span>-->
+    <button monaButton class="mona-input-button" (click)="onDateInputButtonClick()" [disabled]="disabled" [tabIndex]="-1">
+        <fa-icon [icon]="dateIcon"></fa-icon>
+    </button>
+    <button monaButton class="mona-input-button" (click)="onTimeInputButtonClick()" [disabled]="disabled" [tabIndex]="-1">
+        <fa-icon [icon]="timeIcon"></fa-icon>
+    </button>
 </div>
 
 <ng-template #datePopupTemplate>
