--- a/projects/mona-ui/src/lib/date-inputs/modules/time-picker/components/time-picker/time-picker.component.scss
+++ b/projects/mona-ui/src/lib/date-inputs/modules/time-picker/components/time-picker/time-picker.component.scss
@@ -1,24 +1,5 @@
 div.mona-time-picker {
     display: flex;
     position: relative;
-}
-
-ol {
-    list-style: none;
-    margin: 0;
-    background-color: var(--mona-background-dark);
-    height: 150px;
-    overflow-y: scroll;
-    scrollbar-width: none;
-    &::-webkit-scrollbar {
-        display: none;
-    }
-    padding: 75px 5px;
-    & li {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 2px 8px;
-        color: var(--mona-text);
-    }
+    width: 100%;
 }
