--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -964,6 +964,7 @@ input[monaTextBox].mona-input-inner {
     border: 1px solid var(--mona-border-color);
     transition: box-shadow 0.15s ease-in-out;
     height: 100%;
+    width: 100%;
     &:active, &:focus, &:focus-within {
         box-shadow: 0 0 10px -3px var(--mona-shadow-color);
     }
@@ -1216,6 +1217,7 @@ div.mona-progress-bar-indeterminate {
 .mona-window-title-bar {
     border-bottom: 1px solid var(--mona-border-color);
     background-color: var(--mona-window-header-background);
+    @include font-medium;
 }
 
 .mona-window-content {
