--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -134,7 +134,7 @@
                                 <button monaButton>Dropdowns</button>
                                 <mona-combo-box [data]="dropdownListDataItems" textField="text" valueField="value"
                                                 groupField="group" [filterable]="false"
-                                                style="width: 200px; margin-right: 20px;" [disabled]="false"
+                                                style="width: 200px;" [disabled]="false"
                                                 [showClearButton]="true" [allowCustomValue]="true"
                                                 [valueNormalizer]="comboBoxValueNormalizer$"
                                                 [value]="selectedComboBoxDataItem" [itemDisabler]="dropdownItemDisabler"
@@ -147,21 +147,9 @@
                                                     groupField="group" [showClearButton]="true"
                                                     [value]="autoCompleteValue"
                                                     (valueChange)="onAutoCompleteValueChange($event)"
-                                                    style="width: 200px; margin-right: 20px;"></mona-auto-complete>
+                                                    style="width: 200px;"></mona-auto-complete>
                                 <input monaTextBox [ngModel]="textBoxValue">
 <!--                                <mona-text-box [ngModel]="textBoxValue"></mona-text-box>-->
-
-                                <mona-date-picker format="d/M/yyyy" style="width: 250px;" [readonly]="false"
-                                                  [min]="dateMin" [max]="dateMax" [value]="datePickerValue"
-                                                  (valueChange)="onDatePickerValueChange($event)"></mona-date-picker>
-
-                                <mona-time-picker [hourFormat]="dateFormat24Hours ? '24':'12'" [showSeconds]="true" [value]="timePickerValue"
-                                                  (valueChange)="onTimePickerValueChange($event)"
-                                                  [format]="dateFormat24Hours ? 'HH:mm:ss' : 'hh:mm:ss a'" style="width: 200px; margin-left: 40px;"></mona-time-picker>
-
-                                <mona-date-time-picker format="dd/MM/yyyy hh:mm a" style="width: 250px; margin-right: 20px;"
-                                                       [hourFormat]="dateFormat24Hours ? '24' : '12'" [readonly]="false" [value]="dateTimePickerValue"
-                                                       (valueChange)="onDateTimePickerValueChange($event)"></mona-date-time-picker>
 
                                 <mona-drop-down-list [data]="dropdownListDataItems" textField="text" valueField="value"
                                                      groupField="group" [filterable]="true" [disabled]="false"
@@ -169,7 +157,7 @@
                                                      [value]="selectedDropdownListDataItem"
                                                      [itemDisabler]="dropdownItemDisabler"
                                                      (valueChange)="onDropDownValueChange($event)"
-                                                     style="width: 200px; margin-right: 20px;">
+                                                     style="width: 200px; ">
                                     <ng-template monaDropDownListItemTemplate let-dataItem let-listItem="listItem">
                                         <span style="color: deeppink;" *ngIf="dataItem.value % 3 === 0 && !listItem.disabled">{{dataItem.text}}</span>
                                         <span style="color: dodgerblue;" *ngIf="dataItem.value % 3 !== 0 && !listItem.disabled">{{dataItem.text}}</span>
@@ -184,7 +172,7 @@
                                 </mona-drop-down-list>
                                 <mona-multi-select [data]="dropdownListDataItems" textField="text" valueField="value"
                                                    groupField="group"
-                                                   style="width: auto; min-width: 200px; margin-right: 20px;"
+                                                   style="width: auto; min-width: 200px;"
                                                    [monaMultiSelectSummaryTag]="multiSelectTagCount" [filterable]="true"
                                                    [showClearButton]="true"
                                                    [value]="selectedMultiSelectDataItems"
@@ -201,6 +189,48 @@
                                             style="font-weight: bold; color: deepskyblue;">+{{dataItems.length - multiSelectTagCount}}</span> items</span>
                                     </ng-template>
                                 </mona-multi-select>
+                            </div>
+                            <div style="display: flex; align-items: center;">
+                                <button monaButton>Dropdowns</button>
+
+                                <mona-date-picker format="d/M/yyyy" style="width: 250px;" [readonly]="false"
+                                                  [min]="dateMin" [max]="dateMax" [value]="datePickerValue"
+                                                  (valueChange)="onDatePickerValueChange($event)"></mona-date-picker>
+
+                                <mona-time-picker [hourFormat]="dateFormat24Hours ? '24':'12'" [showSeconds]="true" [value]="timePickerValue"
+                                                  (valueChange)="onTimePickerValueChange($event)"
+                                                  [format]="dateFormat24Hours ? 'HH:mm:ss' : 'hh:mm:ss a'" style="width: 200px;"></mona-time-picker>
+
+                                <mona-date-time-picker format="dd/MM/yyyy hh:mm a" style="width: 250px;"
+                                                       [hourFormat]="dateFormat24Hours ? '24' : '12'" [readonly]="false" [value]="dateTimePickerValue"
+                                                       (valueChange)="onDateTimePickerValueChange($event)"></mona-date-time-picker>
+
+                            </div>
+                            <div style="display: flex; align-items: center;">
+                                <button monaButton [disabled]="false" [primary]="false" [selected]="false"
+                                        [toggleable]="false" [flat]="false"
+                                        (selectedChange)="onButtonSelectedChange($event)" (click)="openPopup($event)"
+                                        #testButtonRef>Test Button
+                                    <mona-tooltip [target]="testButtonRef" position="bottom">
+                                        <!--                                        <span style="font-weight: bold; font-size: 24px;">Test Button Tooltip</span>-->
+                                        <img src="https://photos.smugmug.com/Shared/Image/i-WG27Dmp/0/38cbf7f2/4K/colorful-liquid-flow-abstract-digital-art-uhdpaper.com-4K-8.1392-4K.jpg" style="width: 480px; height: 270px;" alt="Tooltip Image" />
+                                    </mona-tooltip>
+                                </button>
+
+                                <button monaButton (click)="openWindow(windowTitleTemplate)">Show Window</button>
+
+                                <button monaButton (click)="showNotification()">Show Notification</button>
+
+                                <button monaButton (click)="showDialog()">Show Dialog</button>
+
+                                <button monaButton #tooltipComponentAnchor style="margin-right: 5px;">Tooltip Component Anchor</button>
+                                <mona-tooltip [target]="tooltipComponentAnchor" position="top">
+                                    <span style="color: #95c5cb; font-weight: bold;">Tempest</span>
+                                </mona-tooltip>
+
+                                <ng-template #windowTitleTemplate>
+                                    <span style="color: crimson; font-weight: bolder;">Templated Window Title</span>
+                                </ng-template>
                             </div>
                         </div>
                     </ng-template>
