--- a/projects/mona-ui/src/lib/notification/components/notification-container/notification-container.component.scss
+++ b/projects/mona-ui/src/lib/notification/components/notification-container/notification-container.component.scss
@@ -2,6 +2,7 @@ div.wrapper {
     position: absolute;
     padding: 10px;
     z-index: 40000;
+    overflow: hidden;
     &.bottomleft {
         bottom: 0;
         left: 0;
