--- a/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
+++ b/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
@@ -20,7 +20,7 @@ div.mona-window-title-bar {
 
 div.mona-window-title-container {
     flex: 1;
-    padding: 8px 10px;
+    padding: 4px 8px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -29,7 +29,7 @@ div.mona-window-title-container {
 }
 
 span.mona-window-title {
-    font-weight: bold;
+    font-weight: 600;
     color: var(--mona-text);
 }
 
