--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
@@ -43,13 +43,12 @@ table {
 
 tr.mona-grid-grouping-row {
     & > td:last-child {
-        font-weight: bolder;
         padding: 0;
     }
 }
 
 span.mona-grid-grouping-row-text {
-    font-weight: bolder;
+    font-weight: bold;
     margin-left: 8px;
 }
 
