--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -231,11 +231,16 @@
                                 <ng-template #windowTitleTemplate>
                                     <span style="color: crimson; font-weight: bolder;">Templated Window Title</span>
                                 </ng-template>
+
+                                <mona-numeric-text-box [readonly]="true" [min]="-4" [step]="0.7"
+                                                       [(ngModel)]="numericTextBoxValue"
+                                                       [formatter]="numericTextBoxFormatter"
+                                                       style="width: 200px;"></mona-numeric-text-box>
                             </div>
                         </div>
                     </ng-template>
                 </mona-tab>
-                <mona-tab title="Expansion Panel">
+                <mona-tab title="Expansion Panel" [disabled]="true">
                     <ng-template monaTabContentTemplate>
                         <div style="width: 100%; height: 100%; padding: 20px;">
                             <mona-expansion-panel title="Panel {{x}}" *ngFor="let x of [1,2,3]">
