--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
@@ -4,7 +4,7 @@
 }
 
 div.mona-grid-cell {
-    padding: 9px 10px;
+    padding: 8px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -14,4 +14,14 @@ div.mona-grid-cell {
 
 div.mona-grid-cell-editing {
     padding: 1px;
+}
+
+
+form.mona-grid-cell-edit-form {
+    height: 100%;
+    display: inline-flex;
+    & > *:first-child {
+        display: inline-flex;
+        height: 100%;
+    }
 }
