--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
@@ -81,7 +81,7 @@ div.mona-grid-column-wrap {
 
 span.mona-grid-column-title {
     flex: 1;
-    padding: 10px 10px;
+    padding: 8px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
