fix: more visual fixes

--- a/projects/mona-ui/src/lib/buttons/modules/chip/components/chip/chip.component.scss
+++ b/projects/mona-ui/src/lib/buttons/modules/chip/components/chip/chip.component.scss
@@ -11,11 +11,11 @@ div.mona-chip-content {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    padding: 0 8px;
 }
 
 span.mona-chip-label {
     display: inline-flex;
-    padding: 4px 8px;
 }
 
 
