--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
@@ -4,12 +4,18 @@
 }
 
 div.mona-grid-cell {
-    padding: 8px;
+    display: flex;
+    align-items: center;
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    padding: 8px;
     outline: none;
     height: 100%;
+}
+
+span.mona-grid-cell-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 div.mona-grid-cell-editing {
@@ -18,10 +24,12 @@ div.mona-grid-cell-editing {
 
 
 form.mona-grid-cell-edit-form {
+    width: 100%;
     height: 100%;
     display: inline-flex;
     & > *:first-child {
         display: inline-flex;
         height: 100%;
+        width: 100%;
     }
 }
